<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio6">

    <TextView
        android:id="@+id/txtAnuncioEj6"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_AnuncioEj6"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/edt_EmailEj6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_EmailEj6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_txtEmailEj6"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/edt_AsuntoEj6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAnuncioEj6"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="41dp" />

    <EditText
        android:id="@+id/edt_AsuntoEj6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_txtAsuntoEj6"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edt_ContenidoEj6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_EmailEj6"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/edt_ContenidoEj6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_txtContenidoEj6"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/btn_EnviarEj6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_AsuntoEj6" />

    <Button
        android:id="@+id/btn_EnviarEj6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#21D13F"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_EnviarEj6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="297dp"
        tools:layout_editor_absoluteY="658dp" />

</androidx.constraintlayout.widget.ConstraintLayout>