<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio4">

    <TextView
        android:id="@+id/txtAnuncioEj4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_AnuncioEj4"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/txtNumeroEj4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNumeroEj4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_txtNumeroEj4"
        android:inputType="phone"
        android:maxLength="8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnLlamarEj4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAnuncioEj4" />


    <Button
        android:id="@+id/btnLlamarEj4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#21D13F"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_LlamarEj4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNumeroEj4"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="389dp" />

</androidx.constraintlayout.widget.ConstraintLayout>